threads corrected after review